--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -2,27 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 * {
-    scroll-behavior: smooth;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px,transparent 1px, transparent 51px),repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px,transparent 1px, transparent 51px),linear-gradient(90deg, hsl(49,0%,3%),hsl(49,0%,3%));
-    font-size: 1rem;
-    overflow-x: hidden;
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
+  font-size: 1rem;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-/* .container { 
-  max-width: 1068px;
-  margin: auto;
-  width: 100%;
-} */
 
 /* Nav */
 
@@ -40,7 +35,7 @@ body {
 
   transform: translateY(-100%);
   transition: transform 0.5s ease;
-  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px,transparent 1px, transparent 51px),repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px,transparent 1px, transparent 51px),linear-gradient(90deg, hsl(49,0%,3%),hsl(49,0%,3%));
+  background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
   display: flex;
 
   justify-content: center;
@@ -106,17 +101,21 @@ body {
   0% {
     transform: scale(1);
   }
+
   25% {
     transform: scale(0.9);
     /* transform: scale(1.1) rotate(10deg); */
   }
+
   50% {
     transform: scale(1);
   }
+
   75% {
     transform: scale(0.9);
     /* transform: scale(1.1) rotate(10deg); */
   }
+
   100% {
     transform: scale(1);
   }
@@ -126,17 +125,21 @@ body {
   0% {
     transform: scale(1);
   }
+
   25% {
     transform: scale(0.9);
     /* transform: scale(1.1) rotate(10deg); */
   }
+
   50% {
     transform: scale(1);
   }
+
   75% {
     transform: scale(0.9);
     /* transform: scale(1.1) rotate(10deg); */
   }
+
   100% {
     transform: scale(1);
   }
@@ -151,11 +154,12 @@ body {
 .menu_overlay .fas {
   position: absolute;
   right: 40px;
-   top: 40px;
+  top: 40px;
   font-size: 2.5rem;
   transition: all 0.3s ease;
   z-index: 100;
 }
+
 .menu_overlay .fas:hover {
   color: rgb(255, 102, 0);
   transform: scale(1.1) rotate(180deg);
@@ -227,60 +231,60 @@ body {
 /* Header */
 
 .header {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    color: #fff;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  color: #fff;
 }
 
 .header-content {
-    z-index: 99;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+  z-index: 99;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 h1 span {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .header-content h1 {
-    font-size: 60px;
-    text-align: center;
-    z-index: 99;
+  font-size: 60px;
+  text-align: center;
+  z-index: 99;
 }
 
 .header-content p {
-    font-size: 1.05rem;
-    display: block;
-    padding-bottom: 2rem;
+  font-size: 1.05rem;
+  display: block;
+  padding-bottom: 2rem;
 }
 
 .fullscreen-video-wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .fullscreen-video-wrap video {
-    min-width: 100%;
-    min-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .header-overlay {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #333;
-    z-index: 1;
-    opacity: 0.8;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #0a0a0a;
+  z-index: 1;
+  opacity: 0.9;
 }
 
 /* Header einde */
@@ -289,26 +293,26 @@ h1 span {
 /* Sections */
 
 .section-a {
-    height: 110vh;
-    width: 100vw;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    z-index: -1;
-    /* background-color: #212121; */
+  height: 110vh;
+  width: 100vw;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  z-index: -1;
+  /* background-color: #212121; */
 }
 
 .section-b {
-    height: 100vh;
-    width: 100vw;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    z-index: -1;
-    /* background-color: #212121; */
+  height: 100vh;
+  width: 100vw;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  z-index: -1;
+  /* background-color: #212121; */
 }
 
 .section-b .container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .section-c {
@@ -329,105 +333,105 @@ h1 span {
 
 /* Go to top button */
 
-.gotopbtn .fa-arrow-up{
-    position: fixed;
-    width: 50px;
-    height: 50px; 
-    border-radius: 50%;
-    z-index: 2;
-    bottom: 40px;
-    right: 50px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 50px;
-    color: white;
-    font-size: 22px;
-    background: rgb(255, 102, 0);
-} 
+.gotopbtn .fa-arrow-up {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  z-index: 2;
+  bottom: 40px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  font-size: 22px;
+  background: rgb(255, 102, 0);
+}
 
 /* Go to top button einde */
 
 .about {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.about .content img{
-    height: auto;
-    width: 400px;
-    border-radius: 50%;
-    max-width: 100%;
+.about .content img {
+  height: auto;
+  width: 400px;
+  border-radius: 50%;
+  max-width: 100%;
 }
 
 .text {
-    width: 550px;
-    max-width: 100%;
-    padding: 0 10px;
+  width: 550px;
+  max-width: 100%;
+  padding: 0 10px;
 }
 
 .content {
-    width: 1280px;
-    max-width: 95%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
+  width: 1280px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .text h1 {
-    color: rgb(255, 102, 0);
-    font-size: 85px;
-    margin-bottom: 20px;
-    text-transform: capitalize;
+  color: rgb(255, 102, 0);
+  font-size: 85px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
 }
 
 .text h5 {
-    color: white;
-    font-size: 25px;
-    margin-bottom: 25px;
-    text-transform: capitalize;
-    letter-spacing: 2px;
+  color: white;
+  font-size: 25px;
+  margin-bottom: 25px;
+  text-transform: capitalize;
+  letter-spacing: 2px;
 }
 
 .text p {
-    color: #c0c4d8;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    margin-bottom: 45px;
+  color: #c0c4d8;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  margin-bottom: 45px;
 }
 
 button {
-    background-color: #546FFF;
-    color: white;
-    border: 2px solid transparent;
-    text-decoration: none;
-    padding: 10px 30px;
-    border-radius: 30px;
-    font-size: 17px;
-    font-weight: bold;
+  background-color: #546FFF;
+  color: white;
+  border: 2px solid transparent;
+  text-decoration: none;
+  padding: 10px 30px;
+  border-radius: 30px;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 button:hover {
-    transform: scale(1.2);
-    background-color: transparent;
-    border: 2px solid #ffcc74;
-    color: #ffcc74;
-    transition: .4s;
-    cursor: pointer;
+  transform: scale(1.2);
+  background-color: transparent;
+  border: 2px solid #ffcc74;
+  color: #ffcc74;
+  transition: .4s;
+  cursor: pointer;
 }
 
 
 
 
-:root{
+:root {
   --background-dark: #2d3548;
-  --text-light: rgba(255,255,255,0.6);
-  --text-lighter: rgba(255,255,255,0.9);
+  --text-light: rgba(255, 255, 255, 0.6);
+  --text-lighter: rgba(255, 255, 255, 0.9);
   --spacing-s: 8px;
   --spacing-m: 16px;
   --spacing-l: 24px;
@@ -437,7 +441,7 @@ button:hover {
 }
 
 
-.hero-section{
+.hero-section {
   align-items: flex-start;
   /* background-color: #212121; */
   display: flex;
@@ -446,7 +450,7 @@ button:hover {
   padding: var(--spacing-xxl) var(--spacing-l);
 }
 
-.card-grid{
+.card-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-column-gap: var(--spacing-l);
@@ -455,31 +459,31 @@ button:hover {
   width: 100%;
 }
 
-@media(min-width: 540px){
-  .card-grid{
-    grid-template-columns: repeat(2, 1fr); 
+@media(min-width: 540px) {
+  .card-grid {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media(min-width: 960px){
-  .card-grid{
-    grid-template-columns: repeat(4, 1fr); 
+@media(min-width: 960px) {
+  .card-grid {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
-.card{
+.card {
   list-style: none;
   position: relative;
 }
 
-.card:before{
+.card:before {
   content: '';
   display: block;
   padding-bottom: 150%;
   width: 100%;
 }
 
-.card__background{
+.card__background {
   background-size: cover;
   background-position: center;
   border-radius: var(--spacing-l);
@@ -492,16 +496,16 @@ button:hover {
   top: 0;
   transform-origin: center;
   transform: scale(1) translateZ(0);
-  transition: 
+  transition:
     filter 200ms linear,
     transform 200ms linear;
 }
 
-.card:hover .card__background{
+.card:hover .card__background {
   transform: scale(1.05) translateZ(0);
 }
 
-.card__content{
+.card__content {
   left: 0;
   padding: var(--spacing-l);
   position: absolute;
@@ -511,256 +515,129 @@ button:hover {
   top: 0;
 }
 
-.card__category{
+.card__category {
   color: var(--text-light);
   font-size: 0.9rem;
   margin-bottom: var(--spacing-s);
   text-transform: uppercase;
 }
 
-.card__heading{
+.card__heading {
   color: var(--text-lighter);
   font-size: 1.9rem;
-  text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
   line-height: 1.4;
   word-spacing: 100vw;
 }
 
 
+/* Footer */
 
-.skill-bars{
-    padding: 25px 30px;
-    margin-top: 280px;
-    width: 600px;
-    background: black;
-    box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
-    border-radius: 10px;
-  }
-  .skill-bars .bar{
-    margin: 20px 0;
-  }
-  .skill-bars .bar:first-child{
-    margin-top: 0px;
-  }
-  .skill-bars .bar .info{
-    color: white;
-    margin-bottom: 5px;
-  }
-  .skill-bars .bar .info span{
-    font-weight: 500;
-    font-size: 17px;
-    opacity: 0;
-    animation: showText 0.5s 1s linear forwards;
-  }
-  @keyframes showText {
-    100%{
-      opacity: 1;
-    }
-  }
-  .skill-bars .bar .progress-line{
-    height: 10px;
-    width: 100%;
-    background: #000;
-    position: relative;
-    transform: scaleX(0);
-    transform-origin: left;
-    border-radius: 10px;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05),
-                0 1px black(255,255,255,0.8);
-    animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
-  }
-  @keyframes animate {
-    100%{
-      transform: scaleX(1);
-    }
-  }
-  .bar .progress-line span{
-    height: 100%;
-    position: absolute;
-    border-radius: 10px;
-    transform: scaleX(0);
-    transform-origin: left;
-    background: rgb(255, 102, 0);
-    animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
-  }
-  .bar .progress-line.html span{
-    width: 85%;
-  }
-  .bar .progress-line.css span{
-    width: 80%;
-  }
-  .bar .progress-line.jquery span{
-    width: 55%;
-  }
-  .bar .progress-line.python span{
-    width: 50%;
-  }
-  .bar .progress-line.mysql span{
-    width: 40%;
-  }
-  .progress-line span::before{
-    position: absolute;
-    content: "";
-    top: -10px;
-    right: 0;
-    height: 0;
-    width: 0;
-    border: 7px solid transparent;
-    border-bottom-width: 0px;
-    border-right-width: 0px;
-    border-top-color: #000;
-    opacity: 0;
-    animation: showText2 0.5s 1.5s linear forwards;
-  }
-  .progress-line span::after{
-    position: absolute;
-    top: -28px;
-    right: 0;
-    font-weight: 500;
-    background: #000;
-    color: #fff;
-    padding: 1px 8px;
-    font-size: 12px;
-    border-radius: 3px;
-    opacity: 0;
-    animation: showText2 0.5s 1.5s linear forwards;
-  }
-  @keyframes showText2 {
-    100%{
-      opacity: 1;
-    }
-  }
-  .progress-line.html span::after{
-    content: "85%";
-  }
-  .progress-line.css span::after{
-    content: "80%";
-  }
-  .progress-line.jquery span::after{
-    content: "55%";
-  }
-  .progress-line.python span::after{
-    content: "50%";
-  }
-  .progress-line.mysql span::after{
-    content: "40%";
-  }
+.footer {
+  position: relative;
+  margin-top: 0px;
+  bottom: -50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 50px;
+}
 
-  /* Media queries */
+.footer p {
+  font-size: 0.85rem;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+}
 
-@media screen and (max-width: 750px) and (min-width: 651px) {
-  
-    .list {
-      height: 30%;
-      width: 50%;
-    }
-  }
+/* Footer einde */
 
-@media screen and (max-width: 600px) {
 
-      .header-content h1 {
-          font-size: 40px;
-      }
-  }
+/* Media queries */
 
-@media screen and (max-width: 650px) {
 
-    .text h1 {
-        font-size: 60px;
-        margin-bottom: 25px;
-    }
     
-    .list {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-  
-    .list li {
-      margin-bottom: 10px;
-      position: relative;
-    }
-  
-    .list a {
-      font-size: 1.2rem;
-    }
-}
-
-@media screen and (max-width: 1180px) {
-
-    .about {
-        width: 100%;
-        height: auto;
-        padding: 70px 0px;
-    }
-
-    .about img {
-        margin-top: 20px;
-    }
-
-    .section-d {
-      height: 80vh;
-      width: 100vw;
-      font-family: 'Poppins', sans-serif;
-      color: white;
-      z-index: -1;
-      background-color: black;
-    }
-
-    .section-e {
-      height: 80vh;
-      width: 100vw;
-      font-family: 'Poppins', sans-serif;
-      color: white;
-      z-index: -1;
-      background-color: black;
-    }
-
-    form {
-      top: 425%;
-    }
-}
-
 @media (max-width: 570px) {
-  .footer p{
+  .footer {
       flex-direction: column;
       row-gap: 1rem;
       padding: 20px 0;
-      color: red;
       text-align: center;
   }
 }
 
-  /* Media queries einde*/
+@media screen and (max-width: 750px) and (min-width: 651px) {
 
+  .list {
+    height: 30%;
+    width: 50%;
+  }
+}
 
-  .footer {
+@media screen and (max-width: 600px) {
+
+  .header-content h1 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+
+  .text h1 {
+    font-size: 60px;
+    margin-bottom: 25px;
+  }
+
+  .list {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 30px 0;
+    width: 100%;
+  }
+
+  .list li {
+    margin-bottom: 10px;
+    position: relative;
+  }
+
+  .list a {
+    font-size: 1.2rem;
+  }
 }
 
+@media screen and (max-width: 1180px) {
 
-.footer p {
-    font-size: 0.938rem;
+  .about {
+    width: 100%;
+    height: auto;
+    padding: 70px 0px;
+  }
+
+  .about img {
+    margin-top: 20px;
+  }
+
+  .section-d {
+    height: 80vh;
+    width: 100vw;
+    font-family: 'Poppins', sans-serif;
     color: white;
-}
+    z-index: -1;
+    background-color: black;
+  }
 
-.social {
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-}
-
-.social .bx {
-    font-size: 1.4rem;
+  .section-e {
+    height: 80vh;
+    width: 100vw;
+    font-family: 'Poppins', sans-serif;
     color: white;
+    z-index: -1;
+    background-color: black;
+  }
+
+  form {
+    top: 425%;
+  }
 }
 
-.social .bx:hover {
-    color: orange;
-    transition: 0.3s all linear;
-}
+/* Media queries einde*/
