--- a/Code/Css/blog.css
+++ b/Code/Css/blog.css
@@ -13,21 +13,9 @@
     display: none;
 }
 
-:root {
-    --container-color: #1a1e21;
-    --second-color: #fd8f44;
-    --text-color: #172317;
-    --bg-color: #fff;
-}
-
 body {
-     background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
-     overflow-x: hidden;
-}
-
-::selection {
-    color: var(--bg-color);
-    background: var(--second-color);
+    background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
+    overflow-x: hidden;
 }
 
 a {
@@ -42,42 +30,206 @@ img {
     width: 100%;
 }
 
+
+/* Nav */
+
+.menu_overlay {
+    width: 100vw;
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    position: absolute;
+    overflow: hidden;
+    color: #fff;
+    z-index: 100;
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.5s ease;
+    background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.list {
+    height: 40%;
+    width: 40%;
+    position: relative;
+    list-style: none;
+}
+
+.list li {
+    height: 51%;
+    width: 50%;
+    cursor: pointer;
+    padding: 1px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s ease;
+}
+
+.list li:nth-child(1) {
+    top: 0;
+    left: 0;
+    background-color: #333;
+}
+
+.list li:nth-child(2) {
+    bottom: 0;
+    left: 0;
+    background-color: #333;
+}
+
+.list li:nth-child(3) {
+    top: 0;
+    right: 0;
+    background-color: #333;
+}
+
+.list li:nth-child(4) {
+    bottom: 0;
+    right: 0;
+    background-color: #333;
+}
+
+.list li:nth-child(1):hover,
+.list li:nth-child(2):hover {
+    z-index: 1;
+    animation: bounce 2s ease infinite;
+}
+
+.list li:nth-child(3):hover,
+.list li:nth-child(4):hover {
+    z-index: 1;
+    animation: bounce2 2s ease infinite;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+
+    25% {
+        transform: scale(0.9);
+        /* transform: scale(1.1) rotate(10deg); */
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    75% {
+        transform: scale(0.9);
+        /* transform: scale(1.1) rotate(10deg); */
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes bounce2 {
+    0% {
+        transform: scale(1);
+    }
+
+    25% {
+        transform: scale(0.9);
+        /* transform: scale(1.1) rotate(10deg); */
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    75% {
+        transform: scale(0.9);
+        /* transform: scale(1.1) rotate(10deg); */
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.list a {
+    font-size: 1.99rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+.menu_overlay .fas {
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    font-size: 2.5rem;
+    transition: all 0.3s ease;
+    z-index: 100;
+}
+
+.menu_overlay .fas:hover {
+    color: rgb(255, 102, 0);
+    transform: scale(1.1) rotate(180deg);
+}
+
+#menuBtn {
+    display: none;
+}
+
+.landing_page {
+    max-height: 100vh;
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.menu {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    padding: 20px;
+    position: fixed;
+    z-index: 99;
+}
+
+.fas {
+    font-size: 2.4rem;
+    z-index: 99;
+    color: white;
+}
+
+.fas:hover {
+    color: rgb(255, 102, 0);
+}
+
+/* Nav einde */
+
+
+/* Blog */
+
 section {
     padding: 3rem 0 2rem;
 }
 
-.container { 
+.container {
     max-width: 1068px;
     margin: auto;
     width: 100%;
 }
 
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 200;
-}
-
-.nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px 0;
-}
-
 .home {
     width: 100%;
     min-height: 500px;
-    background: #333;
+    background: #212121;
     display: grid;
     justify-content: center;
     align-items: center;
 }
 
 .home-text {
-    color: var(--bg-color);
+    color: #fff;
     text-align: center;
 }
 
@@ -106,8 +258,8 @@ header {
 }
 
 .active-filter {
-    background: var(--second-color);
-    color: var(--bg-color);
+    background: #fd8f44;
+    color: #fff;
     padding: 4px 10px;
     border-radius: 4px;
 }
@@ -120,9 +272,10 @@ header {
 }
 
 .post-box {
-    background: var(--bg-color);
-    box-shadow:0 4px 14px hsl(355deg 25% 15% / 10%);
+    background: #fff;
+    box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
     padding: 15px;
+    cursor: pointer;
     border-radius: 0.5rem;
 }
 
@@ -138,13 +291,13 @@ header {
     font-size: 0.9rem;
     font-weight: 500;
     text-transform: uppercase;
-    color: var(--second-color);
+    color: #fd8f44;
 }
 
 .post-title {
     font-size: 1.3rem;
     font-weight: 600;
-    color: var(--text-color);
+    color: #172317;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -182,12 +335,11 @@ header {
     border-radius: 50%;
     object-fit: cover;
     object-position: center;
-    /* border: 2px solid var(--second-color); */
 }
 
 .profile-name {
     font-size: 0.82rem;
-    font-weight: 500;   
+    font-weight: 500;
 }
 
 .footer {
@@ -238,7 +390,7 @@ header {
 }
 
 .back-home {
-    color: var(--second-color);
+    color: #fd8f44;
     font-size: 0.9rem;
     text-decoration: none;
     cursor: pointer;
@@ -247,7 +399,7 @@ header {
 .header-title {
     width: 90%;
     font-size: 2.6rem;
-    color: var(--bg-color);
+    color: #fff;
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -288,6 +440,26 @@ header {
     font-size: 1.1rem;
 }
 
+/* Blog einde */
+
+.gotopbtn .fa-arrow-up {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    z-index: 2;
+    bottom: 40px;
+    right: 50px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 22px;
+    background: rgb(255, 102, 0);
+}
+
+/* Media queries */
+
 @media (max-width: 1060px) {
     .container {
         margin: 0 auto;
@@ -300,9 +472,6 @@ header {
 }
 
 @media (max-width: 800px) {
-    .nav {
-        padding: 14px 0;
-    }
 
     .post-container {
         margin: 0 auto;
@@ -311,10 +480,6 @@ header {
 }
 
 @media (max-width: 768px) {
-    .nav {
-        padding: 10px 0;
-    }
-
     section {
         padding: 2rem 0;
     }
@@ -330,6 +495,7 @@ header {
     .header-title {
         font-size: 2rem;
     }
+
     .header-img {
         height: 370px;
     }
@@ -342,7 +508,7 @@ header {
         margin-top: 9rem !important;
     }
 }
-    
+
 @media (max-width: 570px) {
     .post-header {
         height: 390px;
@@ -351,6 +517,7 @@ header {
     .header-title {
         width: 100%;
     }
+
     .header-img {
         height: 340px;
     }
@@ -389,7 +556,7 @@ header {
     }
 
     .post-header {
-        height: 335px;   
+        height: 335px;
     }
 
     .post-content {
@@ -403,215 +570,34 @@ header {
     }
 }
 
-
-.menu_overlay {
-    width: 100vw;
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-    position: absolute;
-    overflow: hidden;
-    color: #fff;
-    z-index: 100;
-    position: fixed;
-  
-    /* Position relative wanneer onder bepaalde pixels */
-  
-    transform: translateY(-100%);
-    transition: transform 0.5s ease;
-    background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
-    display: flex;
-  
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .list {
-    height: 40%;
-    width: 40%;
-    position: relative;
-    list-style: none;
-  }
-  
-  .list li {
-    height: 51%;
-    width: 50%;
-    cursor: pointer;
-    padding: 1px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.4s ease;
-  }
-  
-  .list li:nth-child(1) {
-    top: 0;
-    left: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(2) {
-    bottom: 0;
-    left: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(3) {
-    top: 0;
-    right: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(4) {
-    bottom: 0;
-    right: 0;
-    background-color: #333;
-  }
-  
-  .list li:nth-child(1):hover,
-  .list li:nth-child(2):hover {
-    z-index: 1;
-    animation: bounce 2s ease infinite;
-  }
-  
-  .list li:nth-child(3):hover,
-  .list li:nth-child(4):hover {
-    z-index: 1;
-    animation: bounce2 2s ease infinite;
-  }
-  
-  @keyframes bounce {
-    0% {
-      transform: scale(1);
-    }
-    25% {
-      transform: scale(0.9);
-      /* transform: scale(1.1) rotate(10deg); */
-    }
-    50% {
-      transform: scale(1);
-    }
-    75% {
-      transform: scale(0.9);
-      /* transform: scale(1.1) rotate(10deg); */
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  @keyframes bounce2 {
-    0% {
-      transform: scale(1);
-    }
-    25% {
-      transform: scale(0.9);
-      /* transform: scale(1.1) rotate(10deg); */
-    }
-    50% {
-      transform: scale(1);
-    }
-    75% {
-      transform: scale(0.9);
-      /* transform: scale(1.1) rotate(10deg); */
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  .list a {
-    font-size: 1.99rem;
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .menu_overlay .fas {
-    position: absolute;
-    right: 40px;
-     top: 40px;
-    font-size: 2.5rem;
-    transition: all 0.3s ease;
-    z-index: 100;
-  }
-  .menu_overlay .fas:hover {
-    color: rgb(255, 102, 0);
-    transform: scale(1.1) rotate(180deg);
-  }
-  
-  #menuBtn {
-    display: none;
-  }
-  
-  .landing_page {
-    max-height: 100vh;
-    height: 100%;
-    width: 100%;
-    position: relative;
-  }
-  
-  .menu {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    padding: 20px;
-    position: fixed;
-    z-index: 99;
-  }
-  
-  .fas {
-    font-size: 2.4rem;
-    z-index: 99;
-    color: white;
-  }
-  
-  .fas:hover {
-    color: rgb(255, 102, 0);
-  }
-  
-  @media screen and (max-width: 750px) and (min-width: 651px) {
+@media screen and (max-width: 750px) and (min-width: 651px) {
     .list li a {
-      font-size: 1.4rem;
+        font-size: 1.4rem;
     }
-  
+
     .list {
-      height: 30%;
-      width: 50%;
+        height: 30%;
+        width: 50%;
     }
-  }
-  
-  @media screen and (max-width: 650px) {
+}
+
+@media screen and (max-width: 650px) {
     .list {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
-  
+
     .list li {
-      margin-bottom: 10px;
-      position: relative;
+        margin-bottom: 10px;
+        position: relative;
     }
-  
+
     .list a {
-      font-size: 1rem;
+        font-size: 1rem;
     }
-  }
+}
 
-
-  .gotopbtn .fa-arrow-up{
-    position: fixed;
-    width: 50px;
-    height: 50px; 
-    border-radius: 50%;
-    z-index: 2;
-    bottom: 40px;
-    right: 50px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 50px;
-    color: white;
-    font-size: 22px;
-    background: rgb(255, 102, 0);
-} 
+/* Media queries einde */
