--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -95,37 +95,46 @@ body {
 }
 
 @keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(0.9);
-    /* transform: scale(1.1) rotate(10deg); */
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(0.9);
-    /* transform: scale(1.1) rotate(10deg); */
-  }
-
-  100% {
-    transform: scale(1);
+  10%, 100% {
+    transform: scale(0.8);
   }
 }
 
 @keyframes bounce2 {
+  10%, 100% {
+    transform: scale(0.8);
+  }
+}
+
+/* @keyframes bounce {
   0% {
     transform: scale(1);
   }
 
   25% {
     transform: scale(0.9);
-    /* transform: scale(1.1) rotate(10deg); */
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  75% {
+    transform: scale(0.5);
+  }
+
+  100% {
+    transform: scale(0.5);
+  }
+} */
+
+/* @keyframes bounce2 {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(0.9);
   }
 
   50% {
@@ -134,13 +143,12 @@ body {
 
   75% {
     transform: scale(0.9);
-    /* transform: scale(1.1) rotate(10deg); */
   }
 
   100% {
     transform: scale(1);
   }
-}
+} */
 
 .list a {
   font-size: 1.99rem;
