--- a/Code/Css/blog.css
+++ b/Code/Css/blog.css
@@ -9,6 +9,15 @@
     box-sizing: border-box;
 }
 
+@keyframes color {
+    0%   { background: #333; }
+    20%  { background: #212121; }
+    40%  { background: black; }
+    60%  { background: black ; }
+    80%  { background: #212121; }
+    100% { background: #333; }
+  }
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -96,62 +105,27 @@ img {
 
 .list li:nth-child(1):hover,
 .list li:nth-child(2):hover {
-    z-index: 1;
-    animation: bounce 2s ease infinite;
+  z-index: 1;
+  animation: bounce 2s ease infinite;
 }
 
 .list li:nth-child(3):hover,
 .list li:nth-child(4):hover {
-    z-index: 1;
-    animation: bounce2 2s ease infinite;
+  z-index: 1;
+  animation: bounce2 2s ease infinite;
 }
 
+
 @keyframes bounce {
-    0% {
-        transform: scale(1);
-    }
-
-    25% {
-        transform: scale(0.9);
-        /* transform: scale(1.1) rotate(10deg); */
-    }
-
-    50% {
-        transform: scale(1);
-    }
-
-    75% {
-        transform: scale(0.9);
-        /* transform: scale(1.1) rotate(10deg); */
-    }
-
-    100% {
-        transform: scale(1);
-    }
+  10%, 100% {
+    transform: scale(0.8);
+  }
 }
 
 @keyframes bounce2 {
-    0% {
-        transform: scale(1);
-    }
-
-    25% {
-        transform: scale(0.9);
-        /* transform: scale(1.1) rotate(10deg); */
-    }
-
-    50% {
-        transform: scale(1);
-    }
-
-    75% {
-        transform: scale(0.9);
-        /* transform: scale(1.1) rotate(10deg); */
-    }
-
-    100% {
-        transform: scale(1);
-    }
+  10%, 100% {
+    transform: scale(0.8);
+  }
 }
 
 .list a {
@@ -205,7 +179,33 @@ img {
 }
 
 /* Nav einde */
+  
+  .fullscreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    height: 55vh;
+    overflow: hidden;
+  }
+  
+  .fullscreen-video-wrap video {
+    min-width: 100%;
+    min-height: 100%;
 
+  }
+  
+  .header-overlay {
+    height: 55vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: #0a0a0a;
+    opacity: 0.8;
+  }
 
 /* Blog */
 
@@ -222,23 +222,28 @@ section {
 .home {
     width: 100%;
     min-height: 500px;
-    background: #212121;
+    background: #33CCCC; /* Fallback */
+    animation: color 9s infinite linear;
     display: grid;
     justify-content: center;
     align-items: center;
+    z-index: 99;
 }
 
 .home-text {
     color: #fff;
     text-align: center;
+    z-index: 99;
 }
 
 .home-title {
     font-size: 3.5rem;
+    z-index: 99;
 }
 
 .home-subtitle {
     font-size: 1rem;
+    z-index: 99;
     font-weight: 400;
 }
 
@@ -272,7 +277,7 @@ section {
 }
 
 .post-box {
-    background: #fff;
+    background: #333;
     box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
     padding: 15px;
     cursor: pointer;
@@ -297,7 +302,7 @@ section {
 .post-title {
     font-size: 1.3rem;
     font-weight: 600;
-    color: #172317;
+    color: white;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -308,6 +313,7 @@ section {
 .post-date {
     display: flex;
     font-size: 0.875rem;
+    color: white;
     text-transform: uppercase;
     font-weight: 400;
     margin-top: 4px;
@@ -315,6 +321,7 @@ section {
 
 .post-description {
     font-size: 0.9rem;
+    color: white;
     line-height: 1.5rem;
     margin: 5px 0 10px;
     display: -webkit-box;
@@ -340,6 +347,7 @@ section {
 .profile-name {
     font-size: 0.82rem;
     font-weight: 500;
+    color: white;
 }
 
 .footer {
