--- a/Code/Css/contact.css
+++ b/Code/Css/contact.css
@@ -16,73 +16,6 @@ body {
     background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
 }
 
-
-/* Contact form */
-
-form {
-  max-width: 420px;
-  justify-content: center;
-  position: relative;
-  transform: translateY(57%);
-  z-index: 99;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  z-index: -1;
-}
-
-.feedback-input {
-  color: white;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 18px;
-  border-radius: 5px;
-  line-height: 22px;
-  background-color: transparent;
-  border: 2px solid rgb(255, 102, 0);
-  z-index: -1;
-  transition: all 0.3s;
-  padding: 13px;
-  margin-bottom: 15px;
-  width: 100%;
-  box-sizing: border-box;
-  outline: 0;
-}
-
-.feedback-input:focus {
-  border: 2px solid rgb(255, 102, 0);
-}
-
-textarea {
-  height: 206px;
-  z-index: -1;
-  line-height: 150%;
-  resize: vertical;
-}
-
-[type="submit"] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  width: 100%;
-  background: rgb(255, 102, 0);
-  border-radius: 5px;
-  z-index: -1;
-
-  border: 0;
-  cursor: pointer;
-  color: white;
-  font-size: 24px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  transition: all 0.3s;
-  margin-top: -4px;
-  font-weight: 700;
-}
-
-/* Contact form einde */
-
-
 /* Menu overlay */
 
 .menu_overlay {
@@ -156,47 +89,16 @@ textarea {
   animation: bounce2 2s ease infinite;
 }
 
+
 @keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(0.9);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(0.9);
-  }
-
-  100% {
-    transform: scale(1);
+  10%, 100% {
+    transform: scale(0.8);
   }
 }
 
 @keyframes bounce2 {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(0.9);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(0.9);
-  }
-
-  100% {
-    transform: scale(1);
+  10%, 100% {
+    transform: scale(0.8);
   }
 }
 
@@ -209,6 +111,7 @@ textarea {
 .menu_overlay .fas {
   position: absolute;
   right: 40px;
+  cursor: pointer;
   top: 40px;
   font-size: 2.5rem;
   transition: all 0.3s ease;
@@ -243,6 +146,7 @@ textarea {
 .fas {
   font-size: 2.4rem;
   z-index: 99;
+  cursor: pointer;
   color: white;
 }
 
@@ -252,60 +156,6 @@ textarea {
 
 
 /* Menu overlay einde */
-
-
-/* Left side */
-
-ul {
-  width: 102px;
-  position: absolute;
-  overflow: hidden;
-}
-
-.leftside {
-  position: absolute;
-  top: 25%;
-  
-}
-
-.leftside li {
-  list-style-type: none;
-  padding: 20px;
-  z-index: 99;
-  transition: .6s;
-  color: white;
-  position: relative;
-}
-
-.leftside li i {
-  font-size: 40px;
-}
-
-.leftside li:hover {
-  padding: 20px 40px;
-}
-
-.leftside li:nth-child(1) {
-  background: #3b5998;
-}
-
-.leftside li:nth-child(2) {
-  background: #00aced;
-}
-
-.leftside li:nth-child(3) {
-  background: #333;
-}
-
-.leftside li:nth-child(4) {
-  background: #007bb6;
-}
-
-.leftside li:nth-child(5) {
-  background: #833AB4;
-}
-
-/* Left side einde */
 
 
 /* Footer */
@@ -328,6 +178,96 @@ ul {
 
 /* Footer einde */
 
+.container-social {
+  display: grid;
+  margin: auto;
+  width: 80%;
+  padding: 100px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 2fr))
+}
+
+
+.fa:hover{
+    opacity: 0.7;
+}
+.fa-facebook{
+    background-color: #3b5998;
+    color: white;
+}
+.fa-twitter{
+    background-color: #55acee;
+    color: white;
+}
+.fa-google{
+    background-color: #dd4b39;
+    color: white;
+}
+.fa-linkedin{
+    background-color: #007bb5;
+    color: white;
+
+}
+.fa-youtube{
+    background-color: #bb0000;
+    color: white;
+}
+.fa-instagram{
+    background-color: #C13584;
+    color: white;
+
+}
+.fa-pinterest{
+    background-color: #cb2027;
+    color: white;
+}
+.fa-trello{
+    background-color: #125688	;
+    color: white;
+}
+.fa-github {
+    background-color: #333;
+    color: white;
+
+}
+.fa-twitch{
+    background-color: #6441a5;
+    color: white;
+}
+.fa-skype{
+    background-color: #009EDC;
+    color: white;
+
+}
+.fa-vimeo{
+    background-color: #45bbff;
+    color: white;
+}
+.fa-tumblr{
+    background-color: #2c4762;
+    color: white;
+}
+.fa-reddit{
+    background-color: #FF5700;
+    color: white;
+}
+.fa-deviantart{
+    background-color: #4e6252;
+    color: white;
+}
+.fa-quora{
+    background-color: #B92B27;
+    color: white;
+
+}
+.fa-discord{
+    background-color: #7289da;
+    color: white;
+}
+.fa-tiktok{
+    background-color: #430297;
+    color: white;
+
+}
 
 /* Media querries */
 
