--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -106,50 +106,6 @@ body {
   }
 }
 
-/* @keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(0.9);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(0.5);
-  }
-
-  100% {
-    transform: scale(0.5);
-  }
-} */
-
-/* @keyframes bounce2 {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(0.9);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(0.9);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-} */
-
 .list a {
   font-size: 1.99rem;
   text-decoration: none;
@@ -424,10 +380,8 @@ button {
 }
 
 button:hover {
-  transform: scale(1.2);
-  background-color: transparent;
-  border: 2px solid #ffcc74;
-  color: #ffcc74;
+  transform: scale(1.1);
+
   transition: .4s;
   cursor: pointer;
 }
@@ -480,6 +434,7 @@ button:hover {
 .card {
   list-style: none;
   position: relative;
+  cursor: pointer;
 }
 
 .card:before {
@@ -648,3 +603,222 @@ button:hover {
 }
 
 /* Media queries einde*/
+
+#font-size {
+  font-size: 50px;
+}
+.owText{
+  text-shadow: 1px 1px rgb(255, 102, 0), 
+  2px 2px rgb(255, 102, 0),  
+  3px 3px rgb(255, 102, 0), 
+  4px 4px rgb(255, 102, 0), 
+  5px 5px rgb(255, 102, 0), 
+  6px 6px rgb(255, 102, 0);
+}
+
+.close-btn {
+  position: absolute;
+
+  cursor: pointer;
+  top: 14%;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  color: #212121;
+  font-size: 47px;
+  font-weight: 600;
+  line-height: 52px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.inhoud .fa-github {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 52px;
+  position: absolute;
+  top: 13.95%;
+  right: 60%;
+  display: block;
+  color: white;
+}
+
+#overlay{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+.about-card{
+  width: 80%;
+  height: 80vh;
+  border-radius: 10px;
+  background-color: #212121;
+  margin-top: 120px;
+  box-shadow: 20px 20px rgba(0,0,0,1);
+  border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
+  transition: all .4s ease;
+  margin-bottom: auto;
+}
+
+.about-card:hover {
+  /* border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
+  box-shadow: 10px 10px rgba(0,0,0,1); */
+}
+
+@media screen and (max-width: 1280px){
+  .about-card {
+    width: 80%;
+    height: 80vh;
+
+  }
+}
+
+@media screen and (max-width: 500px){
+  .footer p {
+    color: red;
+    display: none;
+  }
+}
+
+
+@media screen and (max-width: 625px){
+  #font-size  {
+    font-size: 30px;
+  }
+}
+.inhoud{
+ 
+  display: flex;
+  justify-content: center;
+}
+
+.about1{
+  display: flex;
+  height: 500px;
+  font-size: 130;
+
+}
+
+#overlay-2{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-3{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-4{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-5{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-6{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-7{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+#overlay-8{
+  position: absolute;
+  font-family: sans-serif;
+  display: none;
+  width: 100%;
+  height: 600vh;
+  position: fixed;
+  top: -2%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(71, 71, 71, 0.8);
+  z-index: 99;
+  justify-content: center;
+}
+
+
+
+
