--- a/Code/Css/blog.css
+++ b/Code/Css/blog.css
@@ -352,7 +352,7 @@ section {
 
 .footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 30px 0;
 }
