--- a/Code/Css/skills.css
+++ b/Code/Css/skills.css
@@ -10,7 +10,11 @@
   display: none;
 }
 
+
 body {
+  height: 100vh;
+  z-index: 1;
+  overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
   background-image: repeating-linear-gradient(0deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), repeating-linear-gradient(90deg, rgb(17, 17, 17) 0px, rgb(17, 17, 17) 1px, transparent 1px, transparent 51px), linear-gradient(90deg, hsl(49, 0%, 3%), hsl(49, 0%, 3%));
 }
